tests/NormalTests/paczka1/small_fuzzy/74471129.err
Error in line 4: 8K5vre6KHJJ A261 31,8
Error in line 6: 8K5vre6KHJJ A40 8,6
Error in line 8: SzUzuNDK S581 31,2
Error in line 12: UBj9hwteOE S581 21,9
Error in line 2: oQYZUdIkL9k S905 17,4
